--- a/app/src/main/res/layout-sw600dp-land/activity_messenger.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_messenger.xml
@@ -43,7 +43,7 @@
             android:layout_width="292dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@android:color/white"
+            android:background="@color/drawerBackground"
             android:elevation="8dp"
             app:headerLayout="@layout/drawer_header"
             app:menu="@menu/navigation_drawer"
