--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="background">#E5E5E5</color>
+    <color name="drawerBackground">@android:color/white</color>
     <color name="primaryText">#E2000000</color>
     <color name="secondaryText">#8C000000</color>
 
