add an empty messages screen

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -22,4 +22,8 @@
     <color name="primaryText">#FFFFFFFF</color>
     <color name="secondaryText">#B2FFFFFF</color>
 
+    <color name="emptyIconTint">@color/background</color>
+    <color name="emptyTextPrimary">#E2374248</color>
+    <color name="emptyTextSecondary">#8C000000</color>
+
 </resources>
