--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -74,6 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/drawerBackground"
         app:headerLayout="@layout/drawer_header"
         app:menu="@menu/navigation_drawer"
         app:itemTextColor="@drawable/drawer_text_selector"
