--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -18,5 +18,6 @@
 <resources>
 
     <dimen name="fab_margin">32dp</dimen>
+    <dimen name="conversation_list_padding">120dp</dimen>
 
 </resources>
