--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,16 +17,40 @@
 
 <resources>
 
+    <!-- Main App Colors -->
     <color name="colorPrimary">#23B3A6</color>
     <color name="colorPrimaryDark">#1D9187</color>
     <color name="colorPrimaryDarker">#17746c</color>
     <color name="colorPrimaryLight">#80CBC4</color>
     <color name="colorAccent">#FF4081</color>
 
+    <!-- Material Design Colors -->
+    <color name="materialRed">#F44336</color>
+    <color name="materialPink">#E91E63</color>
+    <color name="materialPurple">#9C27B0</color>
+    <color name="materialDeepPurple">#673AB7</color>
+    <color name="materialIndigo">#3F51B5</color>
+    <color name="materialBlue">#2196F3</color>
+    <color name="materialLightBlue">#03A9F4</color>
+    <color name="materialCyan">#00BCD4</color>
+    <color name="materialTeal">#009688</color>
+    <color name="materialGreen">#4CAF50</color>
+    <color name="materialLightGreen">#8BC34A</color>
+    <color name="materialLime">#CDDC39</color>
+    <color name="materialYellow">#FFEB3B</color>
+    <color name="materialAmber">#FFC107</color>
+    <color name="materialOrange">#FF9800</color>
+    <color name="materialDeepOrange">#FF5722</color>
+    <color name="materialBrown">#795548</color>
+    <color name="materialGrey">#9E9E9E</color>
+    <color name="materialBlueGrey">#607D8B</color>
+
+    <!-- Theme Specific Colors -->
     <color name="background">#E5E5E5</color>
     <color name="drawerBackground">@android:color/white</color>
     <color name="primaryText">#E2000000</color>
     <color name="secondaryText">#8C000000</color>
+    <color name="divider">#e5e5e5</color>
 
     <color name="emptyIconTint">@android:color/white</color>
     <color name="emptyTextPrimary">#FFFFFFFF</color>
