--- a/app/src/main/res/drawable/ic_delete.xml
+++ b/app/src/main/res/drawable/ic_delete.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2016 Jacob Klinker
   ~
@@ -15,13 +14,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
-
-    <dimen name="delete_margin">16dp</dimen>
-
-    <dimen name="fab_margin">24dp</dimen>
-    <dimen name="conversation_list_padding">0dp</dimen>
-    <dimen name="top_extra_padding">0dp</dimen>
-    <dimen name="conversation_list_header_padding">16dp</dimen>
-
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:pathData="M15,16h4v2h-4zM15,8h7v2h-7zM15,12h6v2h-6zM3,18c0,1.1 0.9,2 2,2h6c1.1,0 2,-0.9 2,-2L13,8L3,8v10zM14,5h-3l-1,-1L6,4L5,5L2,5v2h12z"
+        android:fillColor="#FFFFFF"/>
+</vector>
