--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -15,15 +15,17 @@
   ~ limitations under the License.
   -->
 
-<resources>
+<xyz.klinker.messenger.view.SwipeInterceptLinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:clickable="true">
 
-    <dimen name="bottom_extra_padding">8dp</dimen>
-    <dimen name="delete_margin">16dp</dimen>
-    <dimen name="extra_expand_distance">8dp</dimen>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"/>
 
-    <dimen name="fab_margin">24dp</dimen>
-    <dimen name="conversation_list_padding">0dp</dimen>
-    <dimen name="top_extra_padding">0dp</dimen>
-    <dimen name="conversation_list_header_padding">16dp</dimen>
-
-</resources>
+</xyz.klinker.messenger.view.SwipeInterceptLinearLayout>
