--- a/app/src/main/res/drawable/status_bar.xml
+++ b/app/src/main/res/drawable/status_bar.xml
@@ -18,14 +18,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDarker" />
+            <solid android:color="@color/statusBarDarker" />
             <size android:height="24dp"
                 android:width="292dp"/>
         </shape>
     </item>
     <item android:left="292dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark" />
+            <solid android:color="@android:color/white" />
             <size android:height="24dp"
                 android:width="292dp"/>
         </shape>
