--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,9 @@
     <color name="materialGrey">#9E9E9E</color>
     <color name="materialBlueGrey">#607D8B</color>
 
+    <!-- Other Global Colors (not day or night specific) -->
+    <color name="statusBarDarker">#C5C5C5</color>
+
     <!-- Theme Specific Colors -->
     <color name="background">#E5E5E5</color>
     <color name="drawerBackground">@android:color/white</color>
