change nav drawer menu accordingly when opening a conversation

--- a/app/src/main/res/layout-sw600dp-land/activity_messenger.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_messenger.xml
@@ -48,7 +48,7 @@
             android:background="@color/drawerBackground"
             android:elevation="8dp"
             app:headerLayout="@layout/drawer_header"
-            app:menu="@menu/navigation_drawer"
+            app:menu="@menu/navigation_drawer_conversations"
             app:itemTextColor="@drawable/drawer_text_selector"
             app:itemIconTint="@drawable/drawer_icon_selector"/>
 
