--- a/app/src/main/res/drawable/ic_send.xml
+++ b/app/src/main/res/drawable/ic_send.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2016 Jacob Klinker
   ~
@@ -15,11 +14,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
-
-    <dimen name="fab_margin">32dp</dimen>
-    <dimen name="conversation_list_padding">120dp</dimen>
-    <dimen name="message_list_padding">96dp</dimen>
-    <dimen name="max_message_width">248dp</dimen>
-
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"
+        android:fillColor="#FFFFFF"/>
+</vector>
