--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -22,6 +22,7 @@
     <color name="primaryText">#FFFFFFFF</color>
     <color name="secondaryText">#B2FFFFFF</color>
     <color name="divider">#29353a</color>
+    <color name="ripple">#22FFFFFF</color>
 
     <color name="emptyIconTint">@color/background</color>
     <color name="emptyTextPrimary">#E2374248</color>
