--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -20,5 +20,7 @@
     <dimen name="conversation_list_padding">104dp</dimen>
     <dimen name="top_extra_padding">2dp</dimen>
     <dimen name="conversation_list_header_padding">32dp</dimen>
+    <dimen name="message_list_padding">24dp</dimen>
+    <dimen name="max_message_width">248dp</dimen>
 
 </resources>
