--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,50 +18,85 @@
 <resources>
 
     <!-- Main App Colors -->
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00695C</color>
-    <color name="colorPrimaryLight">#80CBC4</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/materialTeal</color>
+    <color name="colorPrimaryDark">@color/materialTealDark</color>
+    <color name="colorPrimaryLight">@color/materialTealLight</color>
+    <color name="colorAccent">@color/materialPinkAccent</color>
 
     <!-- Material Design Colors -->
     <color name="materialRed">#F44336</color>
     <color name="materialRedDark">#C62828</color>
+    <color name="materialRedLight">#EF9A9A</color>
+    <color name="materialRedAccent">#FF5252</color>
     <color name="materialPink">#E91E63</color>
     <color name="materialPinkDark">#AD1457</color>
+    <color name="materialPinkLight">#F48FB1</color>
+    <color name="materialPinkAccent">#FF4081</color>
     <color name="materialPurple">#9C27B0</color>
     <color name="materialPurpleDark">#6A1B9A</color>
+    <color name="materialPurpleLight">#CE93D8</color>
+    <color name="materialPurpleAccent">#E040FB</color>
     <color name="materialDeepPurple">#673AB7</color>
     <color name="materialDeepPurpleDark">#4527A0</color>
+    <color name="materialDeepPurpleLight">#B39DDB</color>
+    <color name="materialDeepPurpleAccent">#7C4DFF</color>
     <color name="materialIndigo">#3F51B5</color>
     <color name="materialIndigoDark">#283593</color>
+    <color name="materialIndigoLight">#9FA8DA</color>
+    <color name="materialIndigoAccent">#536DFE</color>
     <color name="materialBlue">#2196F3</color>
     <color name="materialBlueDark">#1565C0</color>
+    <color name="materialBlueLight">#90CAF9</color>
+    <color name="materialBlueAccent">#448AFF</color>
     <color name="materialLightBlue">#03A9F4</color>
     <color name="materialLightBlueDark">#0277BD</color>
+    <color name="materialLightBlueLight">#81D4FA</color>
+    <color name="materialLightBlueAccent">#40C4FF</color>
     <color name="materialCyan">#00BCD4</color>
     <color name="materialCyanDark">#00838F</color>
+    <color name="materialCyanLight">#80DEEA</color>
+    <color name="materialCyanAccent">#18FFFF</color>
     <color name="materialTeal">#009688</color>
     <color name="materialTealDark">#00695C</color>
+    <color name="materialTealLight">#80CBC4</color>
+    <color name="materialTealAccent">#64FFDA</color>
     <color name="materialGreen">#4CAF50</color>
     <color name="materialGreenDark">#2E7D32</color>
+    <color name="materialGreenLight">#A5D6A7</color>
+    <color name="materialGreenAccent">#69F0AE</color>
     <color name="materialLightGreen">#8BC34A</color>
     <color name="materialLightGreenDark">#558B2F</color>
+    <color name="materialLightGreenLight">#C5E1A5</color>
+    <color name="materialLightGreenAccent">#B2FF59</color>
     <color name="materialLime">#CDDC39</color>
     <color name="materialLimeDark">#9E9D24</color>
+    <color name="materialLimeLight">#E6EE9C</color>
+    <color name="materialLimeAccent">#EEFF41</color>
     <color name="materialYellow">#FFEB3B</color>
     <color name="materialYellowDark">#F9A825</color>
+    <color name="materialYellowLight">#FFF59D</color>
+    <color name="materialYellowAccent">#FFFF00</color>
     <color name="materialAmber">#FFC107</color>
     <color name="materialAmberDark">#FF8F00</color>
+    <color name="materialAmberLight">#FFE082</color>
+    <color name="materialAmberAccent">#FFD740</color>
     <color name="materialOrange">#FF9800</color>
     <color name="materialOrangeDark">#EF6C00</color>
+    <color name="materialOrangeLight">#FFCC80</color>
+    <color name="materialOrangeAccent">#FFAB40</color>
     <color name="materialDeepOrange">#FF5722</color>
     <color name="materialDeepOrangeDark">#D84315</color>
+    <color name="materialDeepOrangeLight">#FFAB91</color>
+    <color name="materialDeepOrangeAccent">#FF6E40</color>
     <color name="materialBrown">#795548</color>
     <color name="materialBrownDark">#4E342E</color>
+    <color name="materialBrownLight">#BCAAA4</color>
     <color name="materialGrey">#9E9E9E</color>
     <color name="materialGreyDark">#424242</color>
+    <color name="materialGreyLight">#EEEEEE</color>
     <color name="materialBlueGrey">#607D8B</color>
     <color name="materialBlueGreyDark">#37474F</color>
+    <color name="materialBlueGreyLight">#B0BEC5</color>
 
     <!-- Other Global Colors (not day or night specific) -->
     <color name="statusBarDarker">#C5C5C5</color>
@@ -72,6 +107,7 @@
     <color name="primaryText">#E2000000</color>
     <color name="secondaryText">#8C000000</color>
     <color name="divider">#e5e5e5</color>
+    <color name="ripple">#22000000</color>
 
     <color name="emptyIconTint">@android:color/white</color>
     <color name="emptyTextPrimary">#FFFFFFFF</color>
