--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -46,7 +46,8 @@
         android:layout_weight="1"
         android:id="@+id/message_list"
         android:layout_marginStart="@dimen/message_list_padding"
-        android:layout_marginEnd="@dimen/message_list_padding"/>
+        android:layout_marginEnd="@dimen/message_list_padding"
+        android:alpha="0"/>
 
     <LinearLayout
         android:layout_width="match_parent"
