add ability to send a message and have it inserted into the list

--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -84,6 +84,8 @@
             android:paddingStart="8dp"
             android:paddingEnd="18dp"
             android:id="@+id/message_entry"
+            android:inputType="textCapSentences|textAutoCorrect|textMultiLine|textShortMessage"
+            android:imeOptions="actionSend"
             android:maxLines="5"/>
 
         <android.support.design.widget.FloatingActionButton
