--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -49,7 +49,8 @@
                 android:text="@string/my_name"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:maxLines="1"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -57,7 +58,8 @@
                 android:id="@+id/drawer_header_my_phone_number"
                 android:text="@string/my_phone_number"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:fontFamily="sans-serif-light"/>
+                android:fontFamily="sans-serif-light"
+                android:maxLines="1"/>
 
         </LinearLayout>
 
