adjust some accent colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -55,11 +55,11 @@
     <color name="materialCyan">#00BCD4</color>
     <color name="materialCyanDark">#00838F</color>
     <color name="materialCyanLight">#80DEEA</color>
-    <color name="materialCyanAccent">#18FFFF</color>
+    <color name="materialCyanAccent">#00B8D4</color>
     <color name="materialTeal">#009688</color>
     <color name="materialTealDark">#00695C</color>
     <color name="materialTealLight">#80CBC4</color>
-    <color name="materialTealAccent">#64FFDA</color>
+    <color name="materialTealAccent">#00BFA5</color>
     <color name="materialGreen">#4CAF50</color>
     <color name="materialGreenDark">#2E7D32</color>
     <color name="materialGreenLight">#A5D6A7</color>
@@ -67,15 +67,15 @@
     <color name="materialLightGreen">#8BC34A</color>
     <color name="materialLightGreenDark">#558B2F</color>
     <color name="materialLightGreenLight">#C5E1A5</color>
-    <color name="materialLightGreenAccent">#B2FF59</color>
+    <color name="materialLightGreenAccent">#64DD17</color>
     <color name="materialLime">#CDDC39</color>
     <color name="materialLimeDark">#9E9D24</color>
     <color name="materialLimeLight">#E6EE9C</color>
-    <color name="materialLimeAccent">#EEFF41</color>
+    <color name="materialLimeAccent">#AEEA00</color>
     <color name="materialYellow">#FFEB3B</color>
     <color name="materialYellowDark">#F9A825</color>
     <color name="materialYellowLight">#FFF59D</color>
-    <color name="materialYellowAccent">#FFFF00</color>
+    <color name="materialYellowAccent">#FFD600</color>
     <color name="materialAmber">#FFC107</color>
     <color name="materialAmberDark">#FF8F00</color>
     <color name="materialAmberLight">#FFE082</color>
