--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -89,14 +89,16 @@
             android:id="@+id/drawer_header_reveal_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:maxLines="1"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/drawer_header_reveal_phone_number"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            android:maxLines="1"/>
 
     </LinearLayout>
 
