create initial load activity to request permissions and fill database with conversation data

--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -47,7 +47,8 @@
         android:id="@+id/message_list"
         android:layout_marginStart="@dimen/message_list_padding"
         android:layout_marginEnd="@dimen/message_list_padding"
-        android:alpha="0"/>
+        android:alpha="0"
+        android:scrollbars="vertical"/>
 
     <LinearLayout
         android:layout_width="match_parent"
