still support fake conversations on a tablet

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -72,7 +72,7 @@
     <color name="materialLimeDark">#9E9D24</color>
     <color name="materialLimeLight">#E6EE9C</color>
     <color name="materialLimeAccent">#AEEA00</color>
-    <color name="materialYellow">#FFEB3B</color>
+    <color name="materialYellow">#FBC02D</color>
     <color name="materialYellowDark">#F9A825</color>
     <color name="materialYellowLight">#FFF59D</color>
     <color name="materialYellowAccent">#FFD600</color>
