--- a/app/src/main/res/layout/message_received.xml
+++ b/app/src/main/res/layout/message_received.xml
@@ -24,27 +24,52 @@
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="@drawable/message_received_background"
         android:backgroundTint="@color/colorPrimary"
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
         android:maxWidth="@dimen/max_message_width"
         android:padding="8dp"
         android:paddingStart="20dp"
         android:paddingEnd="8dp"
-        android:id="@+id/message"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:id="@+id/message_holder">
 
-    <TextView
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxWidth="@dimen/max_message_width"
+            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            android:id="@+id/message"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="@color/secondaryText"
-        android:id="@+id/timestamp"
+        android:orientation="horizontal"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="4dp"/>
+        android:layout_marginTop="4dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="@color/secondaryText"
+            android:id="@+id/contact"
+            android:visibility="gone"
+            android:layout_marginEnd="2dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="@color/secondaryText"
+            android:id="@+id/timestamp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
