--- a/app/src/main/res/layout/message_sent.xml
+++ b/app/src/main/res/layout/message_sent.xml
@@ -25,24 +25,33 @@
     android:layout_marginEnd="16dp"
     android:gravity="end">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="@drawable/message_sent_background"
         android:backgroundTint="@color/drawerBackground"
-        android:textSize="16sp"
-        android:textColor="@color/primaryText"
         android:maxWidth="@dimen/max_message_width"
         android:padding="8dp"
         android:paddingStart="8dp"
         android:paddingEnd="20dp"
-        android:id="@+id/message"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:id="@+id/message_holder">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxWidth="@dimen/max_message_width"
+            android:textSize="16sp"
+            android:textColor="@color/primaryText"
+            android:id="@+id/message"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:textColor="@color/secondaryText"
         android:id="@+id/timestamp"
         android:layout_marginEnd="20dp"
