--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   -->
 
-<xyz.klinker.messenger.view.SwipeInterceptLinearLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -101,4 +101,4 @@
 
     </LinearLayout>
 
-</xyz.klinker.messenger.view.SwipeInterceptLinearLayout>
+</LinearLayout>
