--- a/app/src/main/res/layout/message_sent.xml
+++ b/app/src/main/res/layout/message_sent.xml
@@ -46,7 +46,7 @@
             android:id="@+id/image"
             android:contentDescription="@string/mms_image"/>
 
-        <TextView
+        <com.klinker.android.link_builder.LinkConsumableTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="@dimen/max_message_width"
