--- a/app/src/main/res/layout-sw600dp-land/activity_messenger.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_messenger.xml
@@ -50,7 +50,8 @@
             app:headerLayout="@layout/drawer_header"
             app:menu="@menu/navigation_drawer_conversations"
             app:itemTextColor="@drawable/drawer_text_selector"
-            app:itemIconTint="@drawable/drawer_icon_selector"/>
+            app:itemIconTint="@drawable/drawer_icon_selector"
+            app:itemBackground="?android:attr/selectableItemBackground"/>
 
         <android.support.design.widget.CoordinatorLayout
             android:id="@+id/content"
