--- a/app/src/main/res/drawable/ic_close.xml
+++ b/app/src/main/res/drawable/ic_close.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2016 Jacob Klinker
   ~
@@ -15,13 +14,7 @@
   ~ limitations under the License.
   -->
 
-<resources>
-
-    <dimen name="conversation_list_padding">104dp</dimen>
-    <dimen name="top_extra_padding">2dp</dimen>
-    <dimen name="conversation_list_header_padding">32dp</dimen>
-    <dimen name="message_list_padding">24dp</dimen>
-    <dimen name="max_message_width">372dp</dimen>
-    <dimen name="attached_image_size">192dp</dimen>
-
-</resources>
+<vector android:height="24dp" android:viewportHeight="24.0"
+    android:viewportWidth="24.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z"/>
+</vector>
