--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -54,12 +54,35 @@
             android:alpha="0"
             android:scrollbars="vertical"/>
 
-        <ImageView
-            android:layout_width="96dp"
+        <FrameLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/attached_image"
-            android:visibility="gone"
-            android:contentDescription="@string/attached_image"/>
+            android:id="@+id/attached_image_holder"
+            android:layout_gravity="end"
+            android:layout_marginEnd="@dimen/message_list_padding"
+            android:layout_marginTop="8dp"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="@dimen/attached_image_size"
+                android:layout_height="wrap_content"
+                android:id="@+id/attached_image"
+                android:contentDescription="@string/attached_image"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="48dp"
+                android:layout_marginTop="12dp"/>
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginEnd="48dp"
+                android:background="@color/colorPrimary"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:src="@drawable/ic_close"
+                android:id="@+id/remove_image"
+                android:contentDescription="@string/remove_image"/>
+
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
