--- a/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -33,16 +33,20 @@
 
     <ImageButton
         android:id="@+id/picture"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:padding="16dp"
+        android:layout_marginBottom="16dp"
         android:layout_gravity="bottom|center_horizontal"
         android:contentDescription="@string/take_picture"
         android:background="?android:attr/selectableItemBackground"
         android:src="@drawable/ic_done"/>
 
     <ImageButton
-        android:layout_width="48dp"
+        android:layout_width="72dp"
         android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:padding="16dp"
         android:id="@+id/flip_picture"
         android:layout_gravity="top|center_horizontal"
         android:background="?android:attr/selectableItemBackground"
