--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -85,7 +85,6 @@
         app:headerLayout="@layout/drawer_header"
         app:menu="@menu/navigation_drawer_conversations"
         app:itemTextColor="@drawable/drawer_text_selector"
-        app:itemIconTint="@drawable/drawer_icon_selector"
-        app:itemBackground="?android:attr/selectableItemBackground"/>
+        app:itemIconTint="@drawable/drawer_icon_selector"/>
 
 </android.support.v4.widget.DrawerLayout>
