--- a/app/src/main/res/layout/item_changelog.xml
+++ b/app/src/main/res/layout/item_changelog.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ Copyright (C) 2016 Jacob Klinker
   ~
@@ -15,19 +16,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
-
-    <color name="background">#374248</color>
-    <color name="drawerBackground">#202B30</color>
-    <color name="primaryText">#FFFFFFFF</color>
-    <color name="secondaryText">#B2FFFFFF</color>
-    <color name="divider">#29353a</color>
-    <color name="ripple">#22FFFFFF</color>
-    <color name="code_block_color">#11FFFFFF</color>
-
-    <color name="emptyIconTint">@color/background</color>
-    <color name="emptyTextPrimary">#E2374248</color>
-    <color name="emptyTextSecondary">#8C000000</color>
-    <color name="deleteIcon">@color/background</color>
-
-</resources>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingRight="16dp"
+    android:paddingLeft="16dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+    android:textSize="12sp"
+    android:id="@+id/changelog_item"/>
