--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -108,6 +108,7 @@
     <color name="secondaryText">#8C000000</color>
     <color name="divider">#e5e5e5</color>
     <color name="ripple">#22000000</color>
+    <color name="code_block_color">#11000000</color>
 
     <color name="emptyIconTint">@android:color/white</color>
     <color name="emptyTextPrimary">#FFFFFFFF</color>
